--- a/style.css
+++ b/style.css
@@ -205,3 +205,179 @@ section {
 ::-webkit-scrollbar-thumb {
   background: linear-gradient(to right, rgb(0, 157, 255), rgb(255, 0, 255));
 }
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+}
+.project-card {
+  padding: 3rem 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 1.5rem;
+  border: 2px solid black;
+  border-radius: 3rem;
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+.project-card:hover {
+  background: black;
+  color: white;
+  transform: translateY(-10px) scale(1.02);
+}
+.project-card img {
+  width: 40vw;
+  border-radius: 1rem;
+}
+.project-card:hover .btn {
+  border: 2px solid white;
+  color: white;
+}
+.project-card:hover .btn:hover {
+  border: 2px solid white;
+  background-color: white;
+  color: black;
+}
+.project-card h3 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+.input-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 2rem;
+  margin-top: 5rem;
+}
+
+.contact-info p {
+  font-size: 2rem;
+}
+
+.contact-info i {
+  font-size: 2.5rem;
+  margin-right: 0.5rem;
+}
+
+footer {
+  bottom: 0;
+  left: 0;
+  height: 10rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+footer ul {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+footer ul li a {
+  color: black;
+  font-weight: 600;
+}
+.copyright {
+  font-size: 300;
+  margin-top: 2rem;
+}
+
+@media (max-width: 1280px) {
+  header {
+    padding: 1rem 2rem;
+    gap: 2rem;
+  }
+  .about .about-container {
+    gap: 3rem;
+  }
+  .experience-info {
+    flex-direction: column;
+  }
+  .contact-info p {
+    font-size: 2rem;
+  }
+  .contact-info i {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    gap: 1rem;
+    padding: 1rem 1rem;
+  }
+  header .logo {
+    font-size: 1rem;
+  }
+  header .visit-btn {
+    display: none;
+  }
+  .about-container {
+    flex-direction: column;
+  }
+  .contact-info p {
+    font-size: 1.8rem;
+  }
+  .contact-info i {
+    font-size: 1.8rem;
+  }
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (max-width: 600px) {
+  header #menu-icon {
+    display: block;
+  }
+  .nav-links {
+    position: absolute;
+    top: 100%;
+    margin-top: 1rem;
+    width: 100%;
+    padding: 1rem;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.9);
+    border-radius: 3rem;
+    display: none;
+  }
+  .nav-links li {
+    margin-top: 1.5rem;
+    padding: 1rem;
+  }
+  .nav-links.active {
+    display: block;
+  }
+  header {
+    padding: 1rem 5rem;
+    gap: 8rem;
+  }
+  header .logo {
+    font-size: 1.5rem;
+  }
+
+  .about-container img {
+    width: 80vw;
+  }
+  .contact-info p {
+    font-size: 1.5rem;
+  }
+  .contact-info i {
+    font-size: 1.5rem;
+  }
+  footer ul {
+    gap: 1rem;
+  }
+}
